[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "networkx_robustness"
version = "0.0.4"
authors = [
  { name="Tejas Santanam", email="santanam.tejas@gmail.com" },
]
description = "A package for simulating network attacks on NetworkX graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsantanam/networkx-robustness"
"Bug Tracker" = "https://github.com/tsantanam/networkx-robustness/issues"